--- a/validationpage/bootstrapage.html
+++ b/validationpage/bootstrapage.html
@@ -18,9 +18,10 @@
         <div>
             <label class="form-group">Name</label>
             </div> 
+        <div id="new"></div>
             <div> 
-            <label style="color: rgb(185, 185, 223);background-color: rgb(212, 236, 236);">Name field cannot be
-                empty</label>
+<!--             <label style="color: rgb(185, 185, 223);background-color: rgb(212, 236, 236);">Name field cannot be
+                empty</label> -->
             <input type="text" class="form-control " id="name" style="background-color: rgb(241, 240, 236);">
         </div>
 
