--- a/validationpage/bootstrapage.html
+++ b/validationpage/bootstrapage.html
@@ -18,7 +18,7 @@
         <div>
             <label class="form-group">Name</label>
             </div> 
-        <div id="new"></div>
+        <div id="new" style="color: blue;" ></div>
             <div> 
 <!--             <label style="color: rgb(185, 185, 223);background-color: rgb(212, 236, 236);">Name field cannot be
                 empty</label> -->
@@ -30,18 +30,18 @@
         <div>
             <label class="form-group">Email</label>
         </div>
+        <div id="new1" style="color: blue;" ></div>
         <div>
-            <label style="color: rgb(185, 185, 223);background-color: rgb(212, 236, 236);">Email field cannot be
-                empty</label>
+            
             <input type="text" class="form-control" id="email" style="background-color:  rgb(241, 240, 236);">
         </div>
         <!-- mobile -->
         <div>
             <label class="form-group">Mobile</label>
         </div>
+        <div id="new2" style="color: blue;" ></div>
         <div>
-            <label style="color: rgb(185, 185, 223);background-color: rgb(212, 236, 236);">Mobile field cannot be
-                empty</label>
+           
             <input type="text" class="form-control" id="mobile" style="background-color:  rgb(241, 240, 236);">
         </div>
         </div>
